--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@briangonzalez/react-scripts-on-roids",
-  "version": "1.0.17",
+  "version": "1.0.27",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "awesome-typescript-loader": "^3.4.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -51,9 +52,15 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^4.2.1",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "svg-react-loader": "^0.4.5",
     "sw-precache-webpack-plugin": "0.11.4",
+    "ts-jest": "^21.2.3",
+    "ts-loader": "^3.1.1",
+    "tslint": "^5.8.0",
+    "tslint-react": "^3.2.0",
+    "typescript": "^2.6.2",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
