--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -59,6 +59,7 @@
     "ts-jest": "^21.2.3",
     "ts-loader": "^3.1.1",
     "tslint": "^5.8.0",
+    "tslint-config-standard": "^7.0.0",
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.2",
     "url-loader": "0.6.2",
